--- a/index.html
+++ b/index.html
@@ -5,53 +5,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
-    <h1>Bhuvaneswari Babu</h1>
-    <p>Aspiring Web Developer | Student</p>
-  </header>
+  <div class="container py-5">
+    <header class="text-center mb-4">
+      <h1 class="display-4 text-success">Bhuvaneswari Babu</h1>
+      <p class="lead">Aspiring Web Developer | Student</p>
+    </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#skills">Skills</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <nav class="nav justify-content-center mb-5">
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#projects">Projects</a>
+      <a class="nav-link" href="#skills">Skills</a>
+      <a class="nav-link" href="#contact">Contact</a>
+    </nav>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hello! I'm a computer science student passionate about web development and coding. I enjoy creating websites and learning new technologies.</p>
-  </section>
+    <section id="about" class="mb-5">
+      <h2>About Me</h2>
+      <p>I'm a computer science student passionate about web development and coding. I enjoy creating websites and learning new technologies.</p>
+    </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Portfolio Website</strong> – A personal portfolio built with HTML and CSS.</li>
-      <li><strong>Student Result System</strong> – A project that calculates and displays student marks (built for class assignment).</li>
-    </ul>
-  </section>
+    <section id="projects" class="mb-5">
+      <h2>Projects</h2>
+      <ul>
+        <li><strong>Portfolio Website</strong> – Built with HTML, CSS, and Bootstrap</li>
+        <li><strong>Student Result System</strong> – Calculates and displays student marks</li>
+      </ul>
+    </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul class="skills-list">
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript (Basics)</li>
-    </ul>
-  </section>
+    <section id="skills" class="mb-5">
+      <h2>Skills</h2>
+      <div class="d-flex flex-wrap gap-2">
+        <span class="badge bg-success">HTML</span>
+        <span class="badge bg-success">CSS</span>
+        <span class="badge bg-success">JavaScript</span>
+        <span class="badge bg-success">Bootstrap</span>
+      </div>
+    </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: bhuvaneswari@example.com</p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-  </section>
+    <section id="contact" class="mb-5">
+      <h2>Contact Me</h2>
+      <form id="contactForm" onsubmit="return validateForm()" class="needs-validation" novalidate>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea class="form-control" id="message" rows="3" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </form>
+    </section>
 
-  <footer>
-    <p>&copy; 2025 Bhuvaneswari Babu. All rights reserved.</p>
-  </footer>
+    <footer class="text-center text-muted pt-4 border-top">
+      <p>&copy; 2025 Bhuvaneswari Babu. All rights reserved.</p>
+    </footer>
+  </div>
+
+  <script>
+    function validateForm() {
+      let name = document.getElementById("name").value.trim();
+      let email = document.getElementById("email").value.trim();
+      let message = document.getElementById("message").value.trim();
+      
+      if (!name || !email || !message) {
+        alert("Please fill out all fields.");
+        return false;
+      }
+      return true;
+    }
+  </script>
 
 </body>
 </html>
